# MachinaOS

./: .env.template  .gitignore  .npmignore  .npmrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RFC-0001-UASTL-Universal-API-Schema-Translation-Layer.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  import.json  install.ps1  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tan.md  uninstall.sh
server/: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  constants.py  gunicorn.conf.py  main.py  package-lock.json  package.json  pyproject.toml  requirements-docker.txt  requirements.txt  start.sh
server/config/: ai_cli_providers.json  credential_providers.json  email_providers.json  google_apis.json  llm_defaults.json  log.md  model_registry.json  node_allowlist.json  pricing.json
server/core/: cache.py  cleanup.py  config.py  container.py  credential_backends.py  credentials_database.py  database.py  encryption.py  health.py  logging.py  tracing.py
server/credentials/: __init__.py  apify.py  google.py  google_maps.py  llm.py  telegram.py  twitter.py
server/examples/: __init__.py
server/middleware/: __init__.py  auth.py
server/models/: auth.py  cache.py  database.py  node_metadata.py  nodes.py
server/nodejs/: package-lock.json  package.json  tsconfig.json
server/nodejs/src/: index.ts
server/nodes/: README.md  __init__.py  _icons.py  _visuals.py  agents.py  gmail.py  groups.py  services.py  tools.py  triggers.py  utilities.py  visuals.json
server/nodes/agent/: __init__.py  _handles.py  _inline.py  _specialized.py  ai_agent.py  ai_employee.py  android_agent.py  autonomous_agent.py  chat_agent.py  claude_code_agent.py  codex_agent.py  coding_agent.py  consumer_agent.py  deep_agent.py  orchestrator_agent.py  payments_agent.py  productivity_agent.py  rlm_agent.py  social_agent.py  task_agent.py  tool_agent.py  travel_agent.py  web_agent.py
server/nodes/android/: __init__.py  _base.py  _dispatcher.py  _handlers.py  _router.py  airplane_mode_control.py  app_launcher.py  app_list.py  audio_automation.py  battery_monitor.py  bluetooth_automation.py  camera_control.py  device_state_automation.py  environmental_sensors.py  location.py  media_control.py  motion_detection.py  network_monitor.py  screen_control_automation.py  system_info.py  wifi_automation.py
server/nodes/browser/: __init__.py  _service.py  browser.py
server/nodes/chat/: __init__.py  chat_history.py  chat_send.py
server/nodes/code/: __init__.py  _base.py  _claude_code.py  _nodejs.py  javascript_executor.py  python_executor.py  typescript_executor.py
server/nodes/document/: __init__.py  _helpers.py  document_parser.py  embedding_generator.py  file_downloader.py  http_scraper.py  text_chunker.py  vector_store.py
server/nodes/email/: __init__.py  _service.py  email_read.py  email_receive.py  email_send.py
server/nodes/filesystem/: __init__.py  _backend.py  file_modify.py  file_read.py  fs_search.py  shell.py
server/nodes/google/: __init__.py  _auth_helper.py  _base.py  _credentials.py  _gmail.py  _handlers.py  _oauth.py  _router.py  calendar.py  contacts.py  drive.py  gmail.py  gmail_receive.py  sheets.py  tasks.py
server/nodes/location/: __init__.py  _credentials.py  gmaps_create.py  gmaps_locations.py  gmaps_nearby_places.py
server/nodes/model/: __init__.py  _base.py  _credentials.py  _local_validator.py  anthropic_chat_model.py  cerebras_chat_model.py  deepseek_chat_model.py  gemini_chat_model.py  groq_chat_model.py  kimi_chat_model.py  lmstudio_chat_model.py  mistral_chat_model.py  ollama_chat_model.py  openai_chat_model.py  openrouter_chat_model.py
server/nodes/proxy/: __init__.py  _usage.py  proxy_config.py  proxy_request.py  proxy_status.py
server/nodes/scheduler/: __init__.py  cron_scheduler.py  timer.py
server/nodes/scraper/: __init__.py  _credentials.py  apify_actor.py  crawlee_scraper.py
server/nodes/search/: __init__.py  brave_search.py  duckduckgo_search.py  perplexity_search.py  serper_search.py
server/nodes/skill/: __init__.py  master_skill.py  simple_memory.py
server/nodes/social/: __init__.py  _base.py  social_receive.py  social_send.py
server/nodes/stripe/: __init__.py  _credentials.py  _handlers.py  _install.py  _source.py  stripe_action.py  stripe_receive.py
server/nodes/telegram/: __init__.py  _credentials.py  _filters.py  _handlers.py  _refresh.py  _service.py  telegram_receive.py  telegram_send.py
server/nodes/text/: __init__.py  file_handler.py  text_generator.py
server/nodes/tool/: __init__.py  calculator_tool.py  current_time_tool.py  task_manager.py  write_todos.py
server/nodes/trigger/: __init__.py  chat_trigger.py  task_trigger.py  webhook_trigger.py
server/nodes/twitter/: __init__.py  _base.py  _credentials.py  _handlers.py  _router.py  twitter_receive.py  twitter_search.py  twitter_send.py  (+1 more)
server/routers/: __init__.py  android.py  auth.py  credentials.py  database.py  gmail.py  google.py  maps.py  nodejs_compat.py  schemas.py  twitter.py  webhook.py  websocket.py  whatsapp.py  workflow.py
server/services/: agent_team.py  ai.py  android_service.py  auth.py  auto_skill.py  browser_service.py  chat_client.py  circuit_breaker.py  claude_code_service.py  claude_oauth.py  compaction.py  credential_registry.py  deep_agent_service.py  email_service.py  event_waiter.py  example_loader.py  gmail_oauth.py  google_oauth.py  himalaya_service.py  idempotency.py  maps.py  markdown_formatter.py  memory.py  memory_store.py  model_registry.py  node_allowlist.py  node_executor.py  node_input_schemas.py  node_output_schemas.py  node_registry.py  node_spec.py  nodejs_client.py  oauth_utils.py  parameter_resolver.py  polyglot_client.py  pricing.py  process_service.py  scheduler.py  skill_executor.py  skill_loader.py  (+13 more)
server/skills/: GUIDE.md
server/tests/: conftest.py  test_auto_skill.py  test_node_spec.py  test_parameter_resolver.py  test_plugin_contract.py  test_plugin_self_containment.py  test_workflow_ops.py
server/whatsapp-rpc/: package-lock.json  package.json  schema.json
(+814 files in other folders)
