[project]
name = "machinaos-server"
version = "0.1.0"
description = "MachinaOS workflow automation backend"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",

    # HTTP/WebSocket
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "websockets>=14.0",

    # Google Maps
    "googlemaps>=4.10.0",

    # Logging & Serialization
    "structlog>=24.1.0",
    "orjson>=3.9.0",

    # YAML parsing (for SKILL.md files)
    "pyyaml>=6.0",

    # Auth
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",

    # AI - All providers (directly imported in ai.py)
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",

    # Dependency Injection
    "dependency-injector>=4.40.0",

    # Temporal (distributed execution)
    "temporalio>=1.7.0",

    # Utils
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "qrcode[pil]>=8.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
extra-ai = [
    "langchain-cerebras>=0.1.0",
]
docs = [
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.0.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
