[project]
name = "machinaos-server"
version = "0.1.0"
description = "MachinaOS workflow automation backend"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",  # Required by SQLAlchemy asyncio on macOS ARM64

    # HTTP/WebSocket
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "websockets>=14.0",

    # Google Maps
    "googlemaps>=4.10.0",

    # Logging & Serialization
    "structlog>=24.1.0",
    "orjson>=3.9.0",

    # YAML parsing (for SKILL.md files)
    "pyyaml>=6.0",

    # Auth
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",

    # Credential Encryption
    "cryptography>=44.0.0",

    # AI - All providers (directly imported in ai.py)
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langchain-cerebras>=0.1.0",
    "langgraph>=0.2.0",

    # Dependency Injection
    "dependency-injector>=4.40.0",

    # Utils
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "qrcode[pil]>=8.0",
    "pytz>=2024.1",
    "psutil>=6.0.0",

    # Web Search
    "ddgs>=9.0.0",

    # Twitter/X API
    "xdk>=0.1.0",

    # Apify Web Scraping
    "apify-client>=1.8.0",

    # Crawlee Web Scraping
    "crawlee[beautifulsoup]>=1.4.0",
    "html2text>=2024.2.26",

    # Telegram Bot API
    "python-telegram-bot>=22.6",

    # Gmail API
    "google-api-python-client>=2.100.0",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
temporal = [
    "temporalio>=1.7.0",
]
docs = [
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.0.0",
]
keyring = [
    "keyring>=25.0.0",  # OS-native credential storage (Windows/macOS/Linux)
]
aws = [
    "boto3>=1.34.0",  # AWS Secrets Manager
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = [
    "E402",   # Module level import not at top (intentional lazy imports)
    "E701",   # Multiple statements on one line (compact dict patterns)
]

[tool.uv]
index-url = "https://pypi.org/simple"
