[project]
name = "machinaos-server"
version = "0.1.0"
description = "MachinaOS workflow automation backend"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",  # Required by SQLAlchemy asyncio on macOS ARM64

    # HTTP/WebSocket
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "websockets>=14.0",

    # Google Maps
    "googlemaps>=4.10.0",

    # Logging & Serialization
    "structlog>=24.1.0",
    "orjson>=3.9.0",

    # Tracing / benchmarking (OpenTelemetry — industry standard)
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",

    # YAML parsing (for SKILL.md files)
    "pyyaml>=6.0",

    # Auth
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",

    # Credential Encryption
    "cryptography>=44.0.0",

    # AI - All providers (directly imported in ai.py)
    # Versions pinned to exactly match the main branch so that the LangGraph
    # agent loop behaves identically. The `response.tool_calls` empty-payload
    # regression on tool_use responses appears to come from a library skew
    # somewhere in this set; lockstepping with main eliminates it as a
    # variable. Lift these pins when the upstream cause is identified.
    "langchain-core==1.2.28",
    "langchain-openai==1.1.12",
    "langchain-anthropic==1.4.0",
    "anthropic==0.94.0",
    "langchain-google-genai==4.2.1",
    "google-genai==1.72.0",
    "langchain-groq==1.1.2",
    "langchain-cerebras==0.8.2",
    "langgraph==1.1.6",
    "deepagents==0.5.2",

    # Pydantic 2.13 changed validator ordering; pin to main's 2.12 line
    # to keep AIMessage construction/tool-schema generation identical.
    "pydantic==2.12.5",

    # Dependency Injection
    "dependency-injector>=4.40.0",

    # Utils
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "qrcode[pil]>=8.0",
    "pytz>=2024.1",
    "psutil>=6.0.0",

    # Web Search
    "ddgs>=9.0.0",

    # Twitter/X API
    "xdk>=0.1.0",

    # Apify Web Scraping
    "apify-client>=1.8.0",

    # Crawlee Web Scraping
    "crawlee[beautifulsoup]>=1.4.0",
    "html2text>=2024.2.26",

    # Telegram Bot API
    "python-telegram-bot>=22.6",

    # Markdown formatting (GFM to platform-native)
    "markdown-it-py>=3.0.0",

    # Gmail API
    "google-api-python-client>=2.100.0",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",

    # Temporal (durable workflow execution)
    "temporalio>=1.7.0",

    # RLM (Recursive Language Models) agent
    "rlms>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
]
docs = [
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.0.0",
]
keyring = [
    "keyring>=25.0.0",  # OS-native credential storage (Windows/macOS/Linux)
]
aws = [
    "boto3>=1.34.0",  # AWS Secrets Manager
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: fast unit tests with mocks (default)",
    "node_contract: contract tests that drive a handler through NodeExecutor",
    "slow: tests that take >1s",
    "credentials: tests for the credentials subsystem (encryption, auth_service, oauth)",
]

[tool.coverage.run]
source = ["services.handlers", "services.node_executor"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = [
    "E402",   # Module level import not at top (intentional lazy imports)
    "E701",   # Multiple statements on one line (compact dict patterns)
]

[tool.uv]
index-url = "https://pypi.org/simple"
